bootstrapped api endpoint + swagger for fiuselist/user/add endpoint
